--- a/src/templates/content.html
+++ b/src/templates/content.html
@@ -1,20 +1,21 @@
-<main class="container sm:container mx-auto mt-8 mb-8 px-4">
-  <div class="grid grid-cols-3 gap-4">
+<main class="container sm:container mx-auto mt-8 mb-8 px-12">
+  <div class="grid grid-cols-3 gap-10">
     <div class="col-span-2 relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -24,28 +25,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -55,28 +59,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -86,28 +93,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -117,28 +127,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative row-span-2">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -148,28 +161,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -179,28 +195,31 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
     <div class="relative">
       <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
+        class="brightness-75 w-full h-full rounded-md"
+        src="http://unsplash.it/1000/667?random"
+        loading="lazy"
         alt=""
       />
       <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
+        <h2 class="text-xl text-white font-bold capitalize">Title Text</h2>
+        <h3 class="text-white">Category</h3>
       </div>
       <div class="absolute left-8 bottom-8">
         <div class="mb-3 flex gap-2 items-center">
           <svg
             xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
+            class="h-5 w-5 text-pink-500"
             viewBox="0 0 20 20"
             fill="currentColor"
           >
@@ -210,72 +229,12 @@
               clip-rule="evenodd"
             />
           </svg>
-          <h4>500</h4>
+          <h4 class="text-white">500</h4>
         </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
-        </button>
-      </div>
-    </div>
-    <div class="relative col-span-2">
-      <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
-        alt=""
-      />
-      <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
-      </div>
-      <div class="absolute left-8 bottom-8">
-        <div class="mb-3 flex gap-2 items-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <h4>500</h4>
-        </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
-        </button>
-      </div>
-    </div>
-    <div class="relative">
-      <img
-        class="w-full h-full rounded-md"
-        src="https://dummyimage.com/1920x1080.png"
-        alt=""
-      />
-      <div class="absolute left-8 top-6">
-        <h2 class="text-xl font-bold capitalize">Title Text</h2>
-        <h3 class="text-base">Category</h3>
-      </div>
-      <div class="absolute left-8 bottom-8">
-        <div class="mb-3 flex gap-2 items-center">
-          <svg
-            xmlns="http://www.w3.org/2000/svg"
-            class="h-5 w-5"
-            viewBox="0 0 20 20"
-            fill="currentColor"
-          >
-            <path
-              fill-rule="evenodd"
-              d="M3.172 5.172a4 4 0 015.656 0L10 6.343l1.172-1.171a4 4 0 115.656 5.656L10 17.657l-6.828-6.829a4 4 0 010-5.656z"
-              clip-rule="evenodd"
-            />
-          </svg>
-          <h4>500</h4>
-        </div>
-        <button class="outline outline-offset-2 outline-2 py-1 rounded-md px-2">
-          Read More..
+        <button
+          class="outline outline-offset-2 outline-primary text-primary outline-2 py-1 rounded-md px-2"
+        >
+          <a href="single-page.html">Read More..</a>
         </button>
       </div>
     </div>
