--- a/src/css/input.css
+++ b/src/css/input.css
@@ -1,4 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@700&family=Roboto:wght@300&display=swap");
 @tailwind base;
+@layer components {
+  .carousel-item {
+    opacity: 0;
+    display: block;
+    position: absolute;
+  }
+  .carousel-item[data-active] {
+    opacity: 1;
+  }
+}
 @tailwind components;
 @tailwind utilities;
